# InfiniTAM

InfiniTAM/: .gitignore  CMakeLists.txt  Config.h.in  InfiniTAM.cpp
InfiniTAM/Engine/: CLIEngine.cpp  CMakeLists.txt  DepthSenseEngine.cpp  DepthSenseEngine.h  Kinect2Engine.cpp  LibUVCEngine.cpp  OpenNIEngine.cpp  RealSenseEngine.cpp  UIEngine.cpp
InfiniTAM/ITMLib/: ITMLib.h
InfiniTAM/ITMLib/Engine/: ITMDenseMapper.cpp  ITMMainEngine.cpp  ITMTrackerFactory.h
InfiniTAM/ITMLib/Objects/: ITMGlobalCache.h  ITMRenderState.h
InfiniTAM/ITMLib/Utils/: ITMLibDefines.h  ITMLibSettings.cpp
InfiniTAM/android/jni/: InfiniTAMApp.cpp
